--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "## DESCRIPTION OF THE DATASET\n",
     "\n",
-    "Criteo Sponsored Search Conversion Log Dataset contains logs obtained from Criteo Predictive Search. \\\n",
+    "Criteo Sponsored Search Conversion Log Dataset contains logs obtained from Criteo Predictive Search.\n",
+    "\n",
     "Each row in the dataset represents an action performed by the user on a product related advertisement. \n",
     "\n",
     "### Data description\n",
@@ -50,7 +51,6 @@
     "- Sale : Indicates 1 if conversion occurred and 0 if not.\n",
     "- SalesAmountInEuro : Indicates the revenue obtained when a conversion took place. This might be different from product-price, due to attribution issues. It is -1, when no conversion took place.\n",
     "- Time_delay_for_conversion : This indicates the time between click and conversion. It is -1, when no conversion took place.\n",
-    "\n",
     "- click_timestamp: Timestamp of the click. The dataset is sorted according to timestamp.\n",
     "- nb_clicks_1week: Number of clicks the product related advertisement has received in the last 1 week.\n",
     "- product_price: Price of the product shown in the advertisement.\n",
@@ -286,8 +286,10 @@
    "id": "5e12b83d-a72d-4a7d-ac9c-705be269d38f",
    "metadata": {},
    "source": [
-    "Thanks to this summary we know now that 14 features have `object` type which means they have been hashed. We can simplify every column with `object` type. As long as they are hashed, we do not lose any valuable information (however we will store the original data in a dictionary `encoders`) and what is more - it will simplify the EDA of the dataset later. \\\n",
-    "For example we will transform the `product_gender` column by assigning one number for each category. \\\n",
+    "Thanks to this summary we know now that 14 features have `object` type which means they have been hashed. We can simplify every column with `object` type. As long as they are hashed, we do not lose any valuable information (however we will store the original data in a dictionary `encoders`) and what is more - it will simplify the EDA of the dataset later.\n",
+    "\n",
+    "For example we will transform the `product_gender` column by assigning one number for each category.\n",
+    "\n",
     "To achieve this we will use `LabelEncoder` from `sklearn.preprocessing` package."
    ]
   },
@@ -1226,18 +1228,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43e11dd4-a0e7-48b2-b687-5643c2cff00a",
-   "metadata": {},
-   "source": [
-    "### Plot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "11824169-3af2-4ec5-8da8-0f4dc9af2396",
    "metadata": {},
    "source": [
     "We can observe that although the correlation is not zero, its value is very close to zero. This means that the linear relationship between these variables is very low. For a better understanding, let's plot these two variables using a scatter plot."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43e11dd4-a0e7-48b2-b687-5643c2cff00a",
+   "metadata": {},
+   "source": [
+    "### Plot"
    ]
   },
   {
@@ -3158,7 +3160,7 @@
    "source": [
     "This notebook covers Exploratory Analysis + Feature Engineering Elements + Test of Correlation Coefficients using Criteo Data Search data.\n",
     "\n",
-    "1. Motivations for choices made during work:\n",
+    "**Motivations for choices made during work:**\n",
     "\n",
     "During the work, I focused mainly on the analysis of the numerical values contained in the SalesAmountInEuro and product_price columns with divisions into different subgroups, because they were later taken into account in the correlation tests. It was also easy to present these features in graphs due to their quantitative nature. Most of the data in the dataset was categorical.\n",
     "\n",
@@ -3166,13 +3168,13 @@
     "\n",
     "I decided to group the data in such a way that it is possible to carry out tests on them and to make a sensible and clear data visualization.\n",
     "\n",
-    "2. Conclusions\n",
+    "**Conclusions**\n",
     "\n",
     "The Deep Feature Synthesis algorithm is a tool that can be of great help in training machine learning models. Thanks to it, you can create many new features that are not present in the original dataset, and which may turn out to be crucial when training the model.\n",
     "\n",
     "Thanks to the PCA algorithm, we can significantly reduce the multidimensionality of data without losing a lot of information.\n",
     "\n",
-    "3. Suggestions for further steps\n",
+    "**Suggestions for further steps**\n",
     "\n",
     "The presented notebook contains work on only a small part of the entire Criteo Data Search dataset. If I were to take the next steps, I would also consider other product manufacturers and compare them with each other. Given the size of the entire dataset, a machine learning model could also be trained to predict the price of a product based on its characteristics."
    ]
